--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpeg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1><strong>KEZIYA MARIAM THOMAS</strong>
+						<!-- , a super simple -->
+						<br />
+					<!-- crafted by <a href="http://html5up.net">HTML5 UP</a>. -->
+					</h1>
+					<p>DATA SCIENTIST/SOFTWARE ENGINEER<br /></p>
 				</div>
 			</header>
 
