--- a/index.html
+++ b/index.html
@@ -30,10 +30,20 @@
 			<div id="main">
 
 				<!-- One -->
-					<section id="one">
+					<!-- <section id="one">
 						<header class="major">
 							<h2>Ipsum lorem dolor aliquam ante commodo<br />
 							magna sed accumsan arcu neque.</h2>
+						</header>
+						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<ul class="actions">
+							<li><a href="resume.html" class="button">Resume</a></li>
+						</ul>
+					</section> -->
+					
+					<section id="one">
+						<header class="major">
+							<h2>About me</h2>
 						</header>
 						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
 						<ul class="actions">
@@ -43,8 +53,45 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
-						<div class="row">
+						<h2>Recent Projects</h2>
+						<div>
+							<article class="list-group work-item">
+								<div class="row">
+									<div class="col-8">
+										<h3>Pet breed identification</h3>
+										<p><b>Language/Framework: </b>Python, Keras<br>
+											<b>Domain: </b>Computer Vision - Image classification<br>
+											Description</p>
+									</div>
+									<div class="col-4">
+										<img class="image fit thumb" src="images/thumbs/001.jpeg" alt=""/>
+									</div>
+								</div>
+							</article>
+							<article class="list-group work-item">
+								<div class="row">
+									<div class="col-8">
+										<h3>Fish species detection</h3>
+										<p>Description</p>
+									</div>
+									<div class="col-4">
+										<img class="image fit thumb" src="images/thumbs/002.jpg" alt=""/>
+									</div>
+								</div>
+							</article>
+							<article class="list-group work-item">
+								<div class="row">
+									<div class="col-8">
+										<h3>Exploratory Data Analysis (EDA)</h3>
+										<p>Description</p>
+									</div>
+									<div class="col-4">
+										<img class="image fit thumb" src="images/thumbs/003.jpg" alt=""/>
+									</div>
+								</div>
+							</article>
+						</div>
+						<!-- <div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Magna sed consequat tempus</h3>
@@ -75,7 +122,7 @@
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
-						</div>
+						</div> -->
 						<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
 						</ul>
