--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<script type = "text/javascript"> 
+			var container = document.getElementById('main'); 
+			function copyEmail(e) {   
+				e.preventDefault();
+				navigator.clipboard.writeText(e.target.getAttribute('href')).then(() => {
+					alert("Copied Keziya's email id to clipboard")
+				});
+			}  
+			</script> 
 	</head>
 	<body class="is-preload">
 
@@ -490,10 +499,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
+						<li><a href="https://www.linkedin.com/in/keziyamthomas" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a href="#" class="icon brands fa-github"><span target="_blank" class="label">Github</span></a></li>
+						<li><a href="https://medium.com/@keziyamthomas" target="_blank" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
+						<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+						<li><a href="keziyamthomas@gmail.com" id="copy-email" onclick="copyEmail(event)" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<!-- <ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
@@ -507,7 +518,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
+			<script src="assets/js/main.js"></script>	
 	</body>
 </html>
