--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
 						<header class="major">
 							<h2>About me</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
-						<ul class="actions">
+						<!-- <p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p> -->
+						<p></p>
+						<!-- <ul class="actions">
 							<li><a href="resume.html" class="button">Resume</a></li>
-						</ul>
+						</ul> -->
 					</section>
 
 				<!-- Two -->
@@ -67,10 +68,12 @@
 							<article class="list-group work-item">
 								<div class="row">
 									<div class="col-8">
-										<h3>Pet breed identification</h3>
-										<p><b>Language/Framework: </b>Python, Keras<br>
+										<h3>Pet Breed Identification</h3>
+										<p><b>Tech Used: </b>Python, Keras, Flask, Nginx<br>
 											<b>Domain: </b>Computer Vision - Image classification<br>
-											Description</p>
+											<b>Dataset: </b>Google images, Dogs and Cats Breeds Classification Oxford Dataset<br>
+											
+										</p>
 									</div>
 									<div class="col-4">
 										<img class="image fit thumb" src="images/thumbs/001.jpeg" alt=""/>
@@ -80,11 +83,29 @@
 							<article class="list-group work-item">
 								<div class="row">
 									<div class="col-8">
-										<h3>Fish species detection</h3>
-										<p>Description</p>
+										<h3>Fish Species Detection</h3>
+										<p><b>Tech Used: </b>Python, Tensorflow Object Detection API, Flask, Nginx<br>
+											<b>Domain: </b>Computer Vision - Object Detection<br>
+											<b>Dataset: </b>Images collected manually and annotated using LabelImg<br>
+											
+										</p>
 									</div>
 									<div class="col-4">
 										<img class="image fit thumb" src="images/thumbs/002.jpg" alt=""/>
+									</div>
+								</div>
+							</article>
+							<article class="list-group work-item">
+								<div class="row">
+									<div class="col-8">
+										<h3>Backend Functionality Development of a Networking App for Entrepreneurs</h3>
+										<p><b>Tech Used: </b>Django, Nginx<br>
+											<b>Domain: </b>Backend Development<br>
+											Similar to other social media apps, every user in the system has a profile. Users can post text and images for others to view, create and attend events, post jobs and other updates. RESTful API’s for this app were implemented using Django and data was maintained in MySQL database.<br>
+										</p>
+									</div>
+									<div class="col-4">
+										<img class="image fit thumb" src="images/thumbs/networking.jpg" alt=""/>
 									</div>
 								</div>
 							</article>
@@ -138,7 +159,7 @@
 					</section>
 
 				<!-- Three -->
-					<section id="three">
+					<!-- <section id="three">
 						<h2>Get In Touch</h2>
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
 						<div class="row">
@@ -173,7 +194,7 @@
 								</ul>
 							</div>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Four -->
 				<!--
