Added Github link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<!-- <h2>About me</h2> -->
 						</header>
 						<!-- <p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p> -->
-						<p>Hello and welcome to my portfolio!<br>I am a Software Engineer with an experience of over 4 years. I spent the last 2 years of my career as a Machine Learning Engineer (Python), working on projects in the domain of Computer Vision and Natural Language Processing. Prior to that, I was a Software Developer(JAVA) and was employed by a product based company headquartered in Houston. Read on to find out more about my projects.</p>
+						<p>Hello and welcome to my portfolio!<br>I am a Software Engineer with 5+ years of experience. I spent the last 3 years of my career as a Machine Learning Engineer (Python), working on projects in the domain of Computer Vision and Natural Language Processing. Prior to that, I was a Software Developer(JAVA) and was employed by a product based company headquartered in Houston. Read on to find out more about my projects.</p>
 						<!-- <ul class="actions">
 							<li><a href="resume.html" class="button">Resume</a></li>
 						</ul> -->
@@ -544,7 +544,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<ul class="icons">
 						<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
 						<li><a href="https://www.linkedin.com/in/keziyamthomas" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-						<!-- <li><a href="#" class="icon brands fa-github"><span target="_blank" class="label">Github</span></a></li> -->
+						<li><a href="https://github.com/keziyamthomas" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://medium.com/@keziyamthomas" target="_blank" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
 						<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 						<li><a href="mailto:keziyamthomas@gmail.com" id="copy-email" class="icon solid fa-envelope"><span class="label">Email id</span></a></li>
